--- a/test/index.html
+++ b/test/index.html
@@ -1,13 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
+    <div class="container">
+        <div class="first-div">
+            <label onclick="creater(1)" for="a">
+                <h3>Secim 1</h3>
+                <input id="a" type="radio" name="radio-name" checked>
+            </label>
+            <label onclick="creater(2)" for="b">
+                <h3>Secim 2</h3>
+                <input id="b" type="radio" name="radio-name">
+            </label>
+            <label onclick="creater(3)" for="c">
+                <h3>Secim 3</h3>
+                <input id="c" type="radio" name="radio-name">
+            </label>
+            <label onclick="creater(4)" for="d">
+                <h3>Secim 4</h3>
+                <input id="d" type="radio" name="radio-name">
+            </label>
+            <label onclick="creater(5)" for="e">
+                <h3>Secim 5</h3>
+                <input id="e" type="radio" name="radio-name">
+            </label>
+            <label onclick="creater(6)" for="f">
+                <h3>Secim 6</h3>
+                <input id="f" type="radio" name="radio-name">
+            </label>
+
+
+        </div>
+    </div>
+    <div class="images">
+        <img id="dice" src="/images/dice1.png" alt="">
+    </div>
+    <div class="second-div">
+        <button onclick="roll()">START</button>
+    </div>
+    <script src="script.js"></script>
 </body>
+
 </html>
+
+
+
+
+
+
+
+
+
 
 <!-- https://prod.liveshare.vsengsaas.visualstudio.com/join?9DA2E1BF32C56C18DEFAAC9CCCD0C3D7E3AC -->
