--- a/test/index.html
+++ b/test/index.html
@@ -43,6 +43,9 @@
     <div class="images">
         <img id="dice" src="/images/dice1.png" alt="">
     </div>
+    <div>
+        <h1></h1>
+    </div>
     <div class="second-div">
         <button onclick="roll()">START</button>
     </div>
@@ -50,13 +53,6 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
 
 
 
